<!-- strings.xml -->
<resources>
    <string name="app_name">Spotify</string>
    <string name="back_button">Retour</string>
    <string name="spotify_logo">Logo Spotify</string>
    <string name="register_to_start_listening">Đăng ký để bắt \n đầu nghe</string>
    <string name="continue_with_email">Tiếp tục bằng email</string>
    <string name="continue_with_phone">Tiếp tục bằng số điện thoại</string>
    <string name="continue_with_google">Tiếp tục bằng Google</string>
    <string name="continue_with_apple">Tiếp tục bằng Apple</string>
    <string name="already_have_account">Bạn đã có tài khoản? </string>
    <string name="login_to_spotify">Đăng nhập \n vào Spotify</string>
    <string name="continue_with_facebook">Tiếp tục bằng Facebook</string>
    <string name="no_account_yet">Bạn chưa có tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="playlist_title">Tuyển tập của Ronboogz</string>
    <string name="album_art">Album Art</string>
    <string name="like">Like</string>
    <string name="add">Add</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="devices">Devices</string>
    <string name="share">Share</string>
    <string name="register_title">Đăng ký tài khoản</string>
    <string name="register_subtitle">Đăng ký tài khoản mới bằng email của bạn</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_confirm_password">Xác nhận mật khẩu</string>
    <string name="terms_conditions">Tôi đồng ý với Điều khoản dịch vụ và Chính sách riêng tư</string>
    <string name="btn_register">ĐĂNG KÝ</string>
    <string name="or_register_with">Hoặc đăng ký với</string>
    <string name="sign_in">Đăng nhập</string>

    <!-- Verification Screen -->
    <string name="verification_title">Xác thực email</string>
    <string name="verification_subtitle">Vui lòng nhập mã xác thực đã được gửi đến email của bạn</string>
    <string name="resend_in">Gửi lại mã sau </string>
    <string name="resend_code">Gửi lại mã</string>
    <string name="btn_verify">XÁC THỰC</string>
    <string name="need_help">Cần trợ giúp?</string>
    <string name="google_button">Google Button</string>

    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="li">Thư viện</string>

    <string name="default_web_client_id">705243783215-ei795tnvk2891u4pqvftiea6h80rjb1h.apps.googleusercontent.com</string>
    <string name="search_icon">Search Icon</string>

    <string name="track_cover">track cover</string>

    <string name="attribution_tag_music_player">femobile_music_player</string>
    <string name="attribution_tag_music_service">femobile_music_service</string>
    <string name="Song">"Song● \n"</string>
    <string name="album">Album● \n</string>
    <string name="prenium">Premium</string>
    <string name="recent">Đã nghe gần đây</string>
    <string name="yourplaylist">Danh sách phát của bạn</string>
    <string name="albumDisplay">Album</string>
    <string name="follow">follow</string>
    <string name="following">following</string>

</resources>

